k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: go-ghantt
  labels:
    name: go-ghantt
    app: go-ghantt
