k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: go-gantt
  namespace: go-gantt
  labels:
    app: go-gantt
spec:
  type: ClusterIP
  ports:
  - port: 8080
    targetPort: 8080
    protocol: TCP
    name: http
  selector:
    app: go-gantt
